fix and refactor fix: users in a real time chat now receive mssgs properly fix: chat window responsiveness on small screens refactor: all env variables are set and can be accessed from process.env directly

--- a/client/src/components/ChatRoom/ChatRoom.css
+++ b/client/src/components/ChatRoom/ChatRoom.css
@@ -19,7 +19,7 @@
 }
 
 .message-form {
-	position: absolute;
+	position: sticky;
 	bottom: 0px;
 }
 
